--- a/src/less/formir/setup/classes.less
+++ b/src/less/formir/setup/classes.less
@@ -295,11 +295,12 @@
 @side-hide-expand: side-hide-expand; // sidebar will be expand - set hide on ready (unchecked)
 @side-backdrop: side-backdrop;
 @side-close: side-close;
+@side-open: side-open; // element for open sidebar (label) when is collapse and not visible;
 @side-animated: animated;
 @side-hoverable: hoverable;
-@side-hover-backgrop: hover-backdrop;
+@side-hover-backdrop: hover-backdrop;
 @side-focusable: focusable;
-@side-focus-backgrop: focus-backdrop;
+@side-focus-backdrop: focus-backdrop;
 @side-cover: cover;
 @side-uncover-hover: uncover-hover;
 @side-uncover-focus: uncover-focus;
